force-app/main/default/objects/ampi__Amp_Impact_Setup__c/ampi__Amp_Impact_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Amp Impact Setup</label>
</CustomObject>