force-app/main/default/objects/ampi__Amp_Impact_Setup__c/fields/ampi__Allow_Targets_Column_Download__c.field-meta.xml
<CustomField>
    <fullName>ampi__Allow_Targets_Column_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Targets Column Download?</label>
    <type>Checkbox</type>
</CustomField>