force-app/main/default/objects/ampi__Amp_Impact_Setup__c/fields/ampi__Chatter_Enabled_For_ManageIndicators__c.field-meta.xml
<CustomField>
    <fullName>ampi__Chatter_Enabled_For_ManageIndicators__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter Enabled For Manage Indicators?</label>
    <type>Checkbox</type>
</CustomField>