force-app/main/default/objects/ampi__Amp_Impact_Setup__c/fields/ampi__Document_Upload_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ampi__Document_Upload_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Upload Enabled?</label>
    <type>Checkbox</type>
</CustomField>