force-app/main/default/objects/ampi__Amp_Impact_Setup__c/fields/ampi__Project_Summary_on_ManageDisbursements__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Summary_on_ManageDisbursements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to let the user decide whether to display the Project Summary section or not</description>
    <label>Project Summary on Manage Disbursements?</label>
    <type>Checkbox</type>
</CustomField>