force-app/main/default/objects/ampi__Amp_Impact_Setup__c/fields/ampi__Stop_Light_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ampi__Stop_Light_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Light Enabled?</label>
    <type>Checkbox</type>
</CustomField>