force-app/main/default/objects/ampi__Amp_Impact_Setup__c/fields/ampi__Submit_Targets_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ampi__Submit_Targets_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Targets for Review Enabled?</label>
    <type>Checkbox</type>
</CustomField>