force-app/main/default/objects/ampi__Amp_Impact_Setup__c/fields/ampi__Validation_Range_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ampi__Validation_Range_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Range Enabled?</label>
    <type>Checkbox</type>
</CustomField>